# tree-sitter-hicad

./: .gitignore  Cargo.toml  LICENSE  Makefile  Options_list.txt  Package.swift  Readme.md  binding.gyp  c  grammar.js  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter-hicad.wasm  tree-sitter.json
bindings/c/: tree-sitter-hicad.h  tree-sitter-hicad.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_hicad/: __init__.py  binding.c
bindings/rust/: lib.rs
corpus/: conditions.txt  intermediate.txt  jumps.txt  loops.txt
plugin/: init.lua
queries/: highlights.scm
queries/hicad/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced.txt  arithmetics.txt  assignment.txt  assignments.txt  comments.txt  conditions.txt  definitions.txt  invalid_arithmetics.txt  jumps.txt  jumps2.txt  loops.txt  makro_flow.txt  menu.txt  string.txt  user_guidance.txt
